--- a/projeto-devlinks/style.css
+++ b/projeto-devlinks/style.css
@@ -11,7 +11,7 @@ body {
   background-size: cover;
   */
 
-  /* background: color image repeat pposition/size */
+  /* background: color image repeat position/size */
 
   background: url(imagens/bg-mobile.jpg) no-repeat top center/cover;
 }
@@ -22,21 +22,91 @@ body * {
 }
 
 #container {
-  border: 1px solid white;
+  border: 3px solid rgb(255, 187, 0);
+  border-radius: 70px 0px;
   width: 360px;
   height: 712px;
-  margin: auto;
+  margin: 56px auto;
+  padding: 0 20px;
 }
 
 #profile {
   text-align: center;
+  padding: 24px;
 }
 
 #profile img {
   width: 112px;
+  padding-top: 30px;
 }
 
 #profile p {
   font-weight: 500px;
   line-height: 24px;
+  margin-top: 8px;
+  margin-bottom: 15px;
+}
+
+ul {
+  list-style: none;
+  margin-right: 50px;
+  margin-left: 50px;
+  margin-top: 30px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+}
+
+ul li a {  
+  background: rgba(255, 255, 255, 0.1);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 24px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+
+  text-decoration: none;
+  font-weight: 500;
+}
+
+ul li a:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1.5px solid white;
+}
+
+#social-links {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+  margin: 40px 0;
+  font-size: 24px;  
+}
+
+#social-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+
+  transition: background 0.2s;
+  border-radius: 50%;
+}
+
+#social-links a:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+footer {
+  padding: 24px 0;
+  text-align: center;
+  margin-top: 50px;
+
+  font-size: 14px;
 }
