--- a/projeto-devlinks/style.css
+++ b/projeto-devlinks/style.css
@@ -11,6 +11,7 @@
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
+  --switch-bg-url: url(imagens/moon-stars.svg);
 }
 
 .light {
@@ -20,6 +21,7 @@
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.1);
+  --switch-bg-url: url(imagens/sun.svg);
 }
 
 body {
@@ -63,6 +65,14 @@ body * {
   line-height: 24px;
   margin-top: 8px;
   margin-bottom: 15px;
+}
+
+#switch button {
+  width: 32px;
+  height: 32px;
+  background: #ffffff var(--switch-bg-url) no-repeat center;
+  border: 0;
+  border-radius: 50%;
 }
 
 ul {
